# chirp-workspace-core

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  railway.json
.github/workflows/: ci.yml  release.yml
conformance/: EVIDENCE.md  __init__.py  app.py  application.py  migrate.py
conformance/static/: conformance.css
conformance/templates/: public.html  workspace.html
src/chirp_workspace_core/: __init__.py  _tokens.py  activity.py  auth.py  errors.py  events.py  migrations.py  models.py  permissions.py  repository.py  shell.py
src/chirp_workspace_core/assets/: shell.css  shell.js
src/chirp_workspace_core/migrations/: 001_workspace_core.sql  002_workspace_activity.sql
src/chirp_workspace_core/templates/workspace_core/: shell.html
tests/: conftest.py  test_activity_shell.py  test_conformance.py  test_conformance_browser.py  test_foundation.py  test_railway_config.py  test_repository.py  test_shell_browser.py
tests/templates/: product.html
